kermeta_projects/fr.irisa.triskell.kermeta.io/src/test/resources/typechecher_tests/valid/026_weaving_in_kermeta_mixed/026_weaving_in_kermeta_mixed_baseClass.kmt
/* $Id: 026_weaving_in_kermeta_mixed_baseClass.kmt,v 1.1 2007-09-10 08:35:14 cfaucher Exp $
 * Creation date: February 8, 2007
 * License:
 * Copyright:
 * Authors:
 * checks that the order of declaraion of base and aspect classes doesn't really matter if there is no conflict
 */
@mainClass "mixed_kermeta_weaving::Main"
@mainOperation "main"


package root_package;


require kermeta


class Main
{
	operation main() : Void is do 
		// TODO: implement 'main' operation
	end
}